# cmake-yocto-example

./: CMakeLists.txt  README.md  a.c  a.h  main.c
tmpheader/: CMakeLists.txt  b.h
